force-app/main/default/objects/CalendarFilter__mdt/CalendarFilter__mdt.object-meta.xml
<CustomObject>
    <description>Contains Calendar Sttings fields used as filters in appointment scheduler</description>
    <label>Calendar filter</label>
    <pluralLabel>Calendar filters</pluralLabel>
</CustomObject>