force-app/main/default/objects/CalendarFilter__mdt/fields/Field__c.field-meta.xml
<CustomField>
    <fullName>Field__c</fullName>
    <description>Field definition related to custom metadata filter</description>
    <label>Field</label>
    <metadataRelationshipControllingField>CalendarFilter__mdt.Object__c</metadataRelationshipControllingField>
    <referenceTo>FieldDefinition</referenceTo>
    <relationshipLabel>CalendarFilters</relationshipLabel>
    <relationshipName>CalendarFilters</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>