force-app/main/default/objects/CalendarFilter__mdt/fields/FieldConstraint__c.field-meta.xml
<CustomField>
    <fullName>FieldConstraint__c</fullName>
    <description>Indicates a constraint in current field.</description>
    <label>Field constraint</label>
    <type>TextArea</type>
</CustomField>