force-app/main/default/objects/CalendarFilter__mdt/fields/LookupTo__c.field-meta.xml
<CustomField>
    <fullName>LookupTo__c</fullName>
    <description>Contains related lookup object if custom lookup apllies</description>
    <label>Lookup to</label>
    <referenceTo>EntityDefinition</referenceTo>
    <relationshipLabel>CalendarFilters</relationshipLabel>
    <relationshipName>CalendarFiltersL</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>