force-app/main/default/objects/CalendarFilter__mdt/fields/Object__c.field-meta.xml
<CustomField>
    <fullName>Object__c</fullName>
    <description>Object definition</description>
    <label>Object</label>
    <referenceTo>EntityDefinition</referenceTo>
    <relationshipLabel>CalendarFilters</relationshipLabel>
    <relationshipName>CalendarFilters</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>