force-app/main/default/objects/CalendarFilter__mdt/fields/ReturningFields__c.field-meta.xml
<CustomField>
    <fullName>ReturningFields__c</fullName>
    <description>It contains return fields in custom lookup search results</description>
    <label>Returning Fields</label>
    <length>255</length>
    <type>Text</type>
</CustomField>